worked on the core values page

--- a/corevalues.html
+++ b/corevalues.html
@@ -136,7 +136,7 @@
             </p>
           </div>
           <div class="values-intro-image">
-            <img src="assets/img/child praying.jpg" alt="Students in prayer" />
+            <img src="assets/img/tau cross.jpg" alt="Students in prayer" />
           </div>
         </div>
       </div>
@@ -288,7 +288,7 @@
       <div class="container">
         <div class="parents-community-container">
           <div class="parents-community-image">
-            <img src="assets/img/parent.jpg" alt="Parents at School Event" />
+            <img src="assets/img/PTA.png" alt="Parents at School Event" />
           </div>
           <div class="parents-community-content">
             <div class="section-header text-left">
@@ -408,9 +408,14 @@
             action.
           </p>
           <div class="cta-buttons">
-            <a href="contact.html" class="cta-button">Book a Tour</a>
-            <a href="admissions.html" class="btn-secondary"
-              >Download Prospectus</a
+            <a href="contact.html#appointment" class="cta-button"
+              >Book a Tour</a
+            >
+            <a
+              href="assets/docs/franciscan-prospectus-2025.txt"
+              download="Franciscan-School-Prospectus-2025.txt"
+              class="btn-secondary"
+              >📄 Download Prospectus</a
             >
           </div>
         </div>
@@ -551,5 +556,6 @@
     <!-- Footer section ends -->
 
     <script src="assets/js/franciscan.js"></script>
+    <script src="assets/js/download-prospectus.js"></script>
   </body>
 </html>
