--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="assets/css/franciscan.css" />
   </head>
   <body>
@@ -25,24 +28,34 @@
       </div>
       <div class="logo">
         <div class="logo-circle">
-          <a href="index.html"><img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" /></a>
+          <a href="index.html"
+            ><img
+              src="assets/img/logo.jpg"
+              alt="Franciscan Catholic School Logo"
+          /></a>
         </div>
         <span>Franciscan Catholic Nursery & Primary School</span>
       </div>
       <div class="nav-items">
         <a href="home.html">Home</a>
         <div class="dropdown">
-          <a href="about.html" class="dropdown-trigger active">About <i class="fas fa-chevron-down"></i></a>
+          <a href="about.html" class="dropdown-trigger active"
+            >About <i class="fas fa-chevron-down"></i
+          ></a>
           <div class="dropdown-content">
             <a href="welcome.html" class="active">Welcome Note</a>
             <a href="corevalues.html">Our Core Values</a>
           </div>
         </div>
         <div class="dropdown">
-          <a href="programme.html" class="dropdown-trigger">Programmes <i class="fas fa-chevron-down"></i></a>
+          <a href="programme.html" class="dropdown-trigger"
+            >Programmes <i class="fas fa-chevron-down"></i
+          ></a>
           <div class="dropdown-content">
             <div class="nested-dropdown">
-              <a href="earlyyear.html" class="nested-trigger">Early Years <i class="fas fa-chevron-right"></i></a>
+              <a href="earlyyear.html" class="nested-trigger"
+                >Early Years <i class="fas fa-chevron-right"></i
+              ></a>
               <div class="nested-content">
                 <a href="creche.html">Creche</a>
                 <a href="preschool.html">PreSchool</a>
@@ -83,7 +96,7 @@
     <section class="welcome-note-section">
       <div class="container">
         <div class="section-header">
-          <h2>Message from the Administrator</h2>
+          <h2>Message from the Provincial Superior</h2>
           <p class="subtitle">Guiding our school with vision and dedication</p>
           <div class="divider">
             <span class="divider-line"></span>
@@ -91,14 +104,14 @@
             <span class="divider-line"></span>
           </div>
         </div>
-        
+
         <div class="tab-container">
           <div class="tab-buttons">
             <button class="tab-btn active" data-tab="welcome">
               Welcome Note
             </button>
             <button class="tab-btn" data-tab="profile">
-              Principal's Profile
+              Provincial Superior's Profile
             </button>
           </div>
 
@@ -109,39 +122,43 @@
                   <img src="assets/img/sister2.png" alt="School Principal" />
                   <div class="image-caption">
                     <p>Rev. Sr. Victoria Ogunwade</p>
-                    <p class="caption-title">School Administrator</p>
+                    <p class="caption-title">Provincial Superior</p>
                   </div>
                 </div>
                 <div class="welcome-text">
                   <p class="cursive-intro">Dear Parents and Guardians,</p>
                   <p>
-                    Welcome to Franciscan Catholic Nursery & Primary School, where every child's potential
-                    is nurtured and celebrated. Our commitment to excellence in
-                    education goes beyond academic achievement – we focus on
-                    developing well-rounded individuals equipped with the skills
-                    and values needed for success in today's world.
+                    Welcome to Franciscan Catholic Nursery & Primary School,
+                    where every child's potential is nurtured and celebrated.
+                    Our commitment to excellence in education goes beyond
+                    academic achievement – we focus on developing well-rounded
+                    individuals equipped with the skills and values needed for
+                    success in today's world.
                   </p>
                   <p>
-                    At Franciscan Catholic Nursery & Primary School, we believe that every child is unique and
-                    deserves an education that recognizes and develops their
-                    individual talents. Our dedicated team of educators works
-                    tirelessly to create an environment where learning is
-                    engaging, meaningful, and fun.
+                    At Franciscan Catholic Nursery & Primary School, we believe
+                    that every child is unique and deserves an education that
+                    recognizes and develops their individual talents. Our
+                    dedicated team of educators works tirelessly to create an
+                    environment where learning is engaging, meaningful, and fun.
                   </p>
                   <p>
-                    Our Catholic foundation guides our approach to education, instilling values of compassion, 
-                    integrity, and service in our students. We strive to create a nurturing community where 
-                    children can grow spiritually, intellectually, and socially.
+                    Our Catholic foundation guides our approach to education,
+                    instilling values of compassion, integrity, and service in
+                    our students. We strive to create a nurturing community
+                    where children can grow spiritually, intellectually, and
+                    socially.
                   </p>
                   <p>
-                    The partnership between home and school is vital to a child's success. We encourage 
-                    parents to be actively involved in their child's education and to maintain open 
-                    communication with our staff. Together, we can provide the support and guidance 
-                    that will help your child thrive.
+                    The partnership between home and school is vital to a
+                    child's success. We encourage parents to be actively
+                    involved in their child's education and to maintain open
+                    communication with our staff. Together, we can provide the
+                    support and guidance that will help your child thrive.
                   </p>
                   <p>
-                    We invite you to join our community where we work together to
-                    build a strong foundation for your child's future.
+                    We invite you to join our community where we work together
+                    to build a strong foundation for your child's future.
                   </p>
                   <p class="cursive-closing">In Christ's service,</p>
                   <div class="signature-block">
@@ -150,7 +167,10 @@
                       alt="Principal's Signature"
                       class="signature"
                     />
-                    <p><strong>Rev. Sr. Victoria Ogunwade</strong><br />School Administrator</p>
+                    <p>
+                      <strong>Rev. Sr. Victoria Ogunwade</strong><br />
+                      Provincial Superior
+                    </p>
                   </div>
                 </div>
               </div>
@@ -165,38 +185,57 @@
                 </div>
                 <div class="profile-details">
                   <h3>Rev. Sr. Victoria Ogunwade</h3>
-                  <h4>School Administrator, Franciscan Catholic School</h4>
+                  <h4>Provincial Superior</h4>
                   <div class="profile-bio">
                     <p>
-                      Rev. Sr. Victoria Ogunwade is a dedicated educator and member of the Franciscan Sisters of the Immaculate Conception. 
-                      With over 20 years of experience in Catholic education, she brings spiritual guidance and educational expertise 
-                      to our school community.
+                      Rev. Sr. Victoria Ogunwade is a dedicated educator and
+                      Provincial Superior of the Franciscan Sisters of the
+                      Immaculate Conception. With over 20 years of experience in
+                      Catholic education, she brings spiritual guidance and
+                      educational expertise to our school community.
                     </p>
                     <p>
-                      Sister Victoria's vision for Franciscan Catholic School is rooted in the Catholic tradition of education 
-                      that nurtures the whole child - spiritually, intellectually, emotionally, and physically. Under her leadership, 
-                      our school has flourished as a center of academic excellence and faith formation.
+                      Sister Victoria's vision for Franciscan Catholic School is
+                      rooted in the Catholic tradition of education that
+                      nurtures the whole child - spiritually, intellectually,
+                      emotionally, and physically. Under her leadership, our
+                      school has flourished as a center of academic excellence
+                      and faith formation.
                     </p>
                     <p>
-                      Her dedication to continuous improvement and innovation in education ensures that our students 
-                      receive a modern education grounded in timeless values.
+                      Her dedication to continuous improvement and innovation in
+                      education ensures that our students receive a modern
+                      education grounded in timeless values.
                     </p>
                   </div>
                   <div class="qualifications">
                     <div class="qualification-section">
-                      <h4><i class="fas fa-graduation-cap"></i> Educational Background</h4>
+                      <h4>
+                        <i class="fas fa-graduation-cap"></i> Educational
+                        Background
+                      </h4>
                       <ul>
-                        <li>M.Ed in Educational Leadership - University of Ibadan</li>
-                        <li>B.Ed in Religious Education - University of Lagos</li>
-                        <li>Diploma in Catholic School Administration - Rome</li>
+                        <li>
+                          M.Ed in Educational Leadership - University of Ibadan
+                        </li>
+                        <li>
+                          B.Ed in Religious Education - University of Lagos
+                        </li>
+                        <li>
+                          Diploma in Catholic School Administration - Rome
+                        </li>
                       </ul>
                     </div>
                     <div class="qualification-section">
-                      <h4><i class="fas fa-briefcase"></i> Professional Experience</h4>
+                      <h4>
+                        <i class="fas fa-briefcase"></i> Professional Experience
+                      </h4>
                       <ul>
                         <li>20+ years in Catholic Education</li>
                         <li>Former Vice Principal at St. Mary's College</li>
-                        <li>Member, Association of Catholic School Administrators</li>
+                        <li>
+                          Member, Association of Catholic School Administrators
+                        </li>
                         <li>Coordinator, Diocesan Education Committee</li>
                       </ul>
                     </div>
@@ -215,10 +254,20 @@
       <div class="container">
         <div class="cta-content">
           <h2>Experience the Franciscan Difference</h2>
-          <p>Schedule a visit to our campus and see our nurturing learning environment firsthand.</p>
+          <p>
+            Schedule a visit to our campus and see our nurturing learning
+            environment firsthand.
+          </p>
           <div class="cta-buttons">
-            <a href="contact.html" class="cta-button">Book a Tour</a>
-            <a href="admissions.html" class="btn-secondary">Download Prospectus</a>
+            <a href="contact.html#appointment" class="cta-button"
+              >Book a Tour</a
+            >
+            <a
+              href="assets/docs/franciscan-prospectus-2025.txt"
+              download="Franciscan-School-Prospectus-2025.txt"
+              class="btn-secondary"
+              >📄 Download Prospectus</a
+            >
           </div>
         </div>
       </div>
@@ -233,11 +282,17 @@
             <div class="footer-section about">
               <div class="footer-logo">
                 <div class="logo-circle">
-                  <img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" />
+                  <img
+                    src="assets/img/logo.jpg"
+                    alt="Franciscan Catholic School Logo"
+                  />
                 </div>
-                <h3>Franciscan Catholic Nursery & Primary School</h3>
+                <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
-              <p>Providing quality Catholic education since 1995. Building faith, knowledge, and character in young minds.</p>
+              <p>
+                Quality Catholic Education Rooted in Franciscan Values Since
+                2025.
+              </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -249,32 +304,66 @@
             <div class="footer-section links">
               <h4>Quick Links</h4>
               <ul>
-                <li><a href="about.html"><i class="fas fa-angle-right"></i> About Us</a></li>
-                <li><a href="programme.html"><i class="fas fa-angle-right"></i> Our Programmes</a></li>
-                <li><a href="gallery.html"><i class="fas fa-angle-right"></i> Gallery</a></li>
-                <li><a href="news.html"><i class="fas fa-angle-right"></i> News & Events</a></li>
-                <li><a href="contact.html"><i class="fas fa-angle-right"></i> Contact Us</a></li>
+                <li>
+                  <a href="about.html"
+                    ><i class="fas fa-angle-right"></i> About Us</a
+                  >
+                </li>
+                <li>
+                  <a href="programme.html"
+                    ><i class="fas fa-angle-right"></i> Our Programmes</a
+                  >
+                </li>
+                <li>
+                  <a href="gallery.html"
+                    ><i class="fas fa-angle-right"></i> Gallery</a
+                  >
+                </li>
+                <li>
+                  <a href="contact.html"
+                    ><i class="fas fa-angle-right"></i> Contact Us</a
+                  >
+                </li>
               </ul>
             </div>
 
             <div class="footer-section programmes">
               <h4>Our Programmes</h4>
               <ul>
-                <li><a href="creche.html"><i class="fas fa-angle-right"></i> Creche</a></li>
-                <li><a href="preschool.html"><i class="fas fa-angle-right"></i> Pre-School</a></li>
-                <li><a href="primary.html"><i class="fas fa-angle-right"></i> Primary School</a></li>
-                <li><a href="afterschool.html"><i class="fas fa-angle-right"></i> After School Programme</a></li>
-                <li><a href="holiday.html"><i class="fas fa-angle-right"></i> Holiday Programme</a></li>
+                <li>
+                  <a href="creche.html"
+                    ><i class="fas fa-angle-right"></i> Creche</a
+                  >
+                </li>
+                <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Pre-School</a
+                  >
+                </li>
+                <li>
+                  <a href="primary.html"
+                    ><i class="fas fa-angle-right"></i> Primary School</a
+                  >
+                </li>
               </ul>
             </div>
 
             <div class="footer-section contact">
               <h4>Contact Information</h4>
               <ul>
-                <li><i class="fas fa-map-marker-alt"></i> 15 Francis Avenue, Lekki Phase 1, Lagos, Nigeria</li>
-                <li><i class="fas fa-phone"></i> +234 803 456 7890, +234 802 345 6789</li>
-                <li><i class="fas fa-envelope"></i> info@franciscancatholicschool.edu.ng</li>
-                <li><i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30 PM</li>
+                <li>
+                  <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
+                </li>
+                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
+                <li>
+                  <i class="fas fa-envelope"></i>
+                  info@franciscancatholicschool
+                </li>
+                <li>
+                  <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
+                  PM
+                </li>
               </ul>
             </div>
           </div>
@@ -283,8 +372,14 @@
 
       <div class="footer-bottom">
         <div class="container">
-          <p>&copy; 2025 Franciscan Catholic Nursery and Primary School. All Rights Reserved.</p>
-          <p>Designed by <a href="https://darlingtonodom-portfolio.vercel.app/">Darlculus</a></p>
+          <p>
+            &copy; 2025 Franciscan Catholic Nursery and Primary School. All
+            Rights Reserved.
+          </p>
+          <p>
+            Designed by
+            <a href="https://darlingtonodom-portfolio.vercel.app/">Darlculus</a>
+          </p>
         </div>
       </div>
 
@@ -295,5 +390,6 @@
     <!-- Footer section ends -->
 
     <script src="assets/js/franciscan.js"></script>
+    <script src="assets/js/download-prospectus.js"></script>
   </body>
 </html>
