worked on the programme page

--- a/corevalues.html
+++ b/corevalues.html
@@ -411,12 +411,7 @@
             <a href="contact.html#appointment" class="cta-button"
               >Book a Tour</a
             >
-            <a
-              href="assets/docs/franciscan-prospectus-2025.txt"
-              download="Franciscan-School-Prospectus-2025.txt"
-              class="btn-secondary"
-              >📄 Download Prospectus</a
-            >
+            <button onclick="downloadProspectus()" class="btn-secondary">📄 Download Prospectus</button>
           </div>
         </div>
       </div>
