--- a/earlyyear.html
+++ b/earlyyear.html
@@ -112,11 +112,11 @@
             </div>
 
             <p>
-              At Franciscan Catholic Nursery & Primary School, our Early Years Programme is based
-              on the UK's "Early Years Foundation Stage" curriculum. We provide
-              an integrated approach to care and education which is play-based,
-              following the interests of the children while nurturing their
-              spiritual development.
+              At Franciscan Catholic Nursery & Primary School, our Early Years
+              Programme is based on the UK's "Early Years Foundation Stage"
+              curriculum. We provide an integrated approach to care and
+              education which is play-based, following the interests of the
+              children while nurturing their spiritual development.
             </p>
 
             <p>
@@ -670,7 +670,7 @@
     <!-- Parent Partnership Section ends -->
 
     <!-- Testimonials Section begins -->
-    <section class="testimonials-section">
+    <!-- <section class="testimonials-section">
       <div class="container">
         <div class="section-header">
           <h2>Parent Testimonials</h2>
@@ -748,7 +748,7 @@
           </button>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Testimonials Section ends -->
 
     <!-- Enrollment CTA Section begins -->
@@ -762,10 +762,10 @@
               education that builds a strong foundation for lifelong learning.
             </p>
             <div class="cta-buttons">
-              <a href="admissions.html" class="cta-button"
+              <a href="contact.html#admission" class="cta-button"
                 >Begin Enrollment Process</a
               >
-              <a href="contact.html" class="btn-secondary">Schedule a Visit</a>
+              <a href="contact.html#appointment" class="btn-secondary">Schedule a Visit</a>
             </div>
           </div>
         </div>
@@ -827,11 +827,11 @@
                     alt="Franciscan Catholic School Logo"
                   />
                 </div>
-                <h3>Franciscan Catholic Nursery & Primary School</h3>
+                <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
               <p>
-                Providing quality Catholic education since 1995. Building faith,
-                knowledge, and character in young minds.
+                Quality Catholic Education Rooted in Franciscan Values Since
+                2025.
               </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -860,11 +860,6 @@
                   >
                 </li>
                 <li>
-                  <a href="news.html"
-                    ><i class="fas fa-angle-right"></i> News & Events</a
-                  >
-                </li>
-                <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
                   >
@@ -890,33 +885,20 @@
                     ><i class="fas fa-angle-right"></i> Primary School</a
                   >
                 </li>
-                <li>
-                  <a href="afterschool.html"
-                    ><i class="fas fa-angle-right"></i> After School
-                    Programme</a
-                  >
-                </li>
-                <li>
-                  <a href="holiday.html"
-                    ><i class="fas fa-angle-right"></i> Holiday Programme</a
-                  >
-                </li>
               </ul>
             </div>
+
             <div class="footer-section contact">
               <h4>Contact Information</h4>
               <ul>
                 <li>
-                  <i class="fas fa-map-marker-alt"></i> 15 Francis Avenue, Lekki
-                  Phase 1, Lagos, Nigeria
+                  <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li>
-                  <i class="fas fa-phone"></i> +234 803 456 7890, +234 802 345
-                  6789
-                </li>
+                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool.edu.ng
+                  info@franciscancatholicschool
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
