--- a/programme.html
+++ b/programme.html
@@ -102,16 +102,16 @@
               <p>
                 Our dedicated teachers are committed to recognizing and developing each child's unique talents and abilities, fostering a love for learning that extends beyond the classroom.
               </p>
-              <a href="assets/docs/programme-guide.pdf" class="download-btn">
+              <button onclick="downloadProgrammeGuide()" class="download-btn">
                 <i class="fas fa-download"></i> Download Programme Guide
-              </a>
+              </button>
             </div>
           </div>
-          <div class="programme-intro-image">
+          <!-- <div class="programme-intro-image">
             <div class="shape-container">
               <img src="assets/img/blog-3.jpg" alt="Students Learning" />
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -299,7 +299,7 @@
             </p>
           </div>
           <div class="curriculum-blend-image">
-            <img src="assets/img/portfolio-6.jpg" alt="Children in diverse learning activities" />
+            <img src="assets/img/curriculum.jpg" alt="Children in diverse learning activities" />
           </div>
         </div>
         
@@ -338,7 +338,7 @@
   </section>
   <!-- Curriculum Blend Section ends -->
 
-  <!-- Extra-Curricular Section begins -->
+  <!-- Extra-Curricular Section begins
   <section class="extra-curricular-section">
     <div class="container">
       <div class="section-header">
@@ -401,11 +401,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Extra-Curricular Section ends -->
 
   <!-- Testimonials Section begins -->
-  <section class="testimonials-section">
+  <!-- <section class="testimonials-section">
     <div class="container">
       <div class="section-header">
         <h2>What Parents Say</h2>
@@ -472,7 +472,7 @@
         </button>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Testimonials Section ends -->
 
   <!-- Call to action section begins -->
@@ -482,7 +482,7 @@
         <h2>Join Our School Family</h2>
         <p>Ready to give your child the gift of a quality Catholic education?</p>
         <div class="cta-buttons">
-          <a href="admissions.html" class="cta-button">Apply Now</a>
+          <a href="contact.html#admission" class="cta-button">Apply Now</a>
           <a href="contact.html" class="btn-secondary">Contact Us</a>
         </div>
       </div>
@@ -492,74 +492,121 @@
 
   <!-- Footer section begins -->
   <footer class="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-section about">
-            <div class="footer-logo">
-              <div class="logo-circle">
-                <img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" />
+      <div class="footer-top">
+        <div class="container">
+          <div class="footer-content">
+            <div class="footer-section about">
+              <div class="footer-logo">
+                <div class="logo-circle">
+                  <img
+                    src="assets/img/logo.jpg"
+                    alt="Franciscan Catholic School Logo"
+                  />
+                </div>
+                <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
-              <h3>Franciscan Catholic Nursery and Primary School</h3>
+              <p>
+                Quality Catholic Education Rooted in Franciscan Values Since
+                2025.
+              </p>
+              <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+              </div>
             </div>
-            <p>Quality Catholic Education Rooted in Franciscan Values Since 2025.</p>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
+
+            <div class="footer-section links">
+              <h4>Quick Links</h4>
+              <ul>
+                <li>
+                  <a href="about.html"
+                    ><i class="fas fa-angle-right"></i> About Us</a
+                  >
+                </li>
+                <li>
+                  <a href="programme.html"
+                    ><i class="fas fa-angle-right"></i> Our Programmes</a
+                  >
+                </li>
+                <li>
+                  <a href="gallery.html"
+                    ><i class="fas fa-angle-right"></i> Gallery</a
+                  >
+                </li>
+                <li>
+                  <a href="contact.html"
+                    ><i class="fas fa-angle-right"></i> Contact Us</a
+                  >
+                </li>
+              </ul>
             </div>
-          </div>
 
-          <div class="footer-section links">
-            <h4>Quick Links</h4>
-            <ul>
-              <li><a href="about.html"><i class="fas fa-angle-right"></i> About Us</a></li>
-              <li><a href="programme.html"><i class="fas fa-angle-right"></i> Our Programmes</a></li>
-              <li><a href="gallery.html"><i class="fas fa-angle-right"></i> Gallery</a></li>
-              <li><a href="news.html"><i class="fas fa-angle-right"></i> News & Events</a></li>
-              <li><a href="contact.html"><i class="fas fa-angle-right"></i> Contact Us</a></li>
-            </ul>
-          </div>
+            <div class="footer-section programmes">
+              <h4>Our Programmes</h4>
+              <ul>
+                <li>
+                  <a href="creche.html"
+                    ><i class="fas fa-angle-right"></i> Creche</a
+                  >
+                </li>
+                <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Pre-School</a
+                  >
+                </li>
+                <li>
+                  <a href="primary.html"
+                    ><i class="fas fa-angle-right"></i> Primary School</a
+                  >
+                </li>
+              </ul>
+            </div>
 
-          <div class="footer-section programmes">
-            <h4>Our Programmes</h4>
-            <ul>
-              <li><a href="creche.html"><i class="fas fa-angle-right"></i> Creche</a></li>
-              <li><a href="preschool.html"><i class="fas fa-angle-right"></i> Pre-School</a></li>
-              <li><a href="primary.html"><i class="fas fa-angle-right"></i> Primary School</a></li>
-              <li><a href="afterschool.html"><i class="fas fa-angle-right"></i> After School Programme</a></li>
-              <li><a href="holiday.html"><i class="fas fa-angle-right"></i> Holiday Programme</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-section contact">
-            <h4>Contact Information</h4>
-            <ul>
-              <li><i class="fas fa-map-marker-alt"></i> 15 Francis Avenue, Lekki Phase 1, Lagos, Nigeria</li>
-              <li><i class="fas fa-phone"></i> +234 803 456 7890, +234 802 345 6789</li>
-              <li><i class="fas fa-envelope"></i> info@franciscancatholicschool.edu.ng</li>
-              <li><i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30 PM</li>
-            </ul>
+            <div class="footer-section contact">
+              <h4>Contact Information</h4>
+              <ul>
+                <li>
+                  <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
+                </li>
+                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
+                <li>
+                  <i class="fas fa-envelope"></i>
+                  info@franciscancatholicschool
+                </li>
+                <li>
+                  <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
+                  PM
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-bottom">
-      <div class="container">
-        <p>&copy; 2025 Franciscan Catholic Nursery and Primary School. All Rights Reserved.</p>
-        <p>Designed by <a href="https://darlingtonodom-portfolio.vercel.app/">Darlculus</a></p>
+      <div class="footer-bottom">
+        <div class="container">
+          <p>
+            &copy; 2025 Franciscan Catholic Nursery and Primary School. All
+            Rights Reserved.
+          </p>
+          <p>
+            Designed by
+            <a href="https://darlingtonodom-portfolio.vercel.app/">Darlculus</a>
+          </p>
+        </div>
       </div>
-    </div>
 
-    <button id="scrollToTop" class="scroll-to-top">
-      <i class="fas fa-arrow-up"></i>
-    </button>
-  </footer>
+      <button id="scrollToTop" class="scroll-to-top">
+        <i class="fas fa-arrow-up"></i>
+      </button>
+    </footer>
   <!-- Footer section ends -->
 
   <script src="assets/js/franciscan.js"></script>
+  <script src="assets/js/download-prospectus.js"></script>
 </body>
 </html>
 
