changed the font icon colors to white

--- a/earlyyear.html
+++ b/earlyyear.html
@@ -660,7 +660,7 @@
 
           <div class="parent-partnership-image">
             <img
-              src="assets/img/parent-partnership.jpg"
+              src="assets/img/PTA.png"
               alt="Parent and Teacher Meeting"
             />
           </div>
