worked on the early years page

--- a/earlyyear.html
+++ b/earlyyear.html
@@ -39,7 +39,7 @@
         <span>Franciscan Catholic Nursery & Primary School</span>
       </div>
       <div class="nav-items">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <div class="dropdown">
           <a href="about.html" class="dropdown-trigger"
             >About <i class="fas fa-chevron-down"></i
@@ -143,8 +143,8 @@
 
           <div class="introduction-image">
             <img
-              src="assets/img/early-years-intro.jpg"
-              alt="Children playing and learning"
+              src="assets/img/playlearn.png"
+              alt="Learning can be fun"
             />
           </div>
         </div>
@@ -169,7 +169,7 @@
           <div class="programme-card">
             <div class="programme-image">
               <img
-                src="assets/img/creche-programme.jpg"
+                src="assets/img/creche.png"
                 alt="Creche Programme"
               />
               <div class="programme-age">Ages 1-2</div>
@@ -209,7 +209,7 @@
           <div class="programme-card">
             <div class="programme-image">
               <img
-                src="assets/img/preschool-programme.jpg"
+                src="assets/img/preschool.png"
                 alt="PreSchool Programme"
               />
               <div class="programme-age">Ages 3-4</div>
@@ -368,7 +368,7 @@
         <div class="enabling-environment-container">
           <div class="enabling-environment-image">
             <img
-              src="assets/img/enabling-environment.jpg"
+              src="assets/img/enablinglearningenvironment.png"
               alt="Enabling Learning Environment"
             />
           </div>
