--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
         <span>Franciscan Catholic Nursery and Primary School</span>
       </div>
       <div class="nav-items">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <div class="dropdown">
           <a href="about.html" class="dropdown-trigger"
             >About <i class="fas fa-chevron-down"></i
@@ -794,7 +794,7 @@
               <h4>Contact Information</h4>
               <ul>
                 <li>
-                  <i class="fas fa-map-marker-alt"></i> Unity Estate, Off
+                  <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
                 <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
